# Fuzzy-Controller-Project

./: README.md
Assignment2/: CMakeLists.txt  fuzzylogic.cpp  main.cpp
